--- a/public/CSS/form.css
+++ b/public/CSS/form.css
@@ -85,3 +85,22 @@ input {
     display: flex;
     justify-content: center;
 }
+
+/* form date repas */
+
+.gridFormDateRParent {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-column-gap: 0;
+    grid-row-gap: 0;
+    margin-top: 30px;
+    font-size: 25px;
+    align-items: center;
+    justify-content: center;
+}
+
+.gridFormDateR1 { grid-area: 1 / 1 / 2 / 3; }
+.gridFormDateR2 { grid-area: 2 / 1 / 3 / 2; }
+.gridFormDateR3 { grid-area: 2 / 2 / 3 / 3; }
+.gridFormDateR4 { grid-area: 4 / 1 / 5 / 3; }
