:sparkles: Ajout repas par semaine

--- a/templates/decompte_rationnaire/dateRepas.html.twig
+++ b/templates/decompte_rationnaire/dateRepas.html.twig
@@ -29,7 +29,9 @@
 
     </div>
     <p>{{ promo.nomPromotion }}</p>
-    <p>{{ form(formRepas) }}</p>
+    <p>{{ form_start(formRepas) }}</p>
+    <button>Envoyer</button>
+    <p>{{ form_end(formRepas) }}</p>
 
     </div>
 
