--- a/templates/decompte_rationnaire/decompte_rationnaire.html.twig
+++ b/templates/decompte_rationnaire/decompte_rationnaire.html.twig
@@ -15,21 +15,15 @@
 {% block main %}
     <div class="gridH1Parent">
         <div class="gridH1Vide1"></div>
+
         <div class="gridH1"><h1 class="h3 mb-3 font-weight-normal">Décompte rationnaire</h1></div>
         <div class="gridH1Vide2"></div>
     </div>
-    <div id="numSemaine">
-        <img class="flechesNumSemaine" src="{{ asset('CSS/media/fleche-gauche-blanche.png') }}" alt="" id="g" onclick="moins()">
-        <div>
-            <h3>Semaine n° <span id="numero">{{ "now" | date('W')+ 2 }}</span></h3>
-        </div>
-        <img class="flechesNumSemaine" src="{{ asset('CSS/media/fleche-droite-blanche.png') }}" alt="" id="d" onclick="plus()">
-    </div>
-    <div>
-    </div>
     {% for promotion in app.user.promotion %}
         <div class="listePromo">
-            <a class="promo" href="{{ path('ajoutDate_dateRepas', {'promo': promotion.id}) }}">{{ promotion.nomPromotion }}</a>
+            {% set nextWeek = week +2 %}
+            <a class="promo"
+               href="{{ path('ajoutDate_dateRepas', {'promo': promotion.id,'semaine': nextWeek }) }}">{{ promotion.nomPromotion }}</a>
         </div>
     {% else %}
         <div id="aucunePromo">
