--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -40,7 +40,7 @@
             #}
         </div>
         <div class="divBouttonValidation">
-            <button class="bouttonValidation" type="submit">
+            <button id="bouttonConnexion" class="bouttonValidation" type="submit">
                 CONNEXION
             </button>
         </div>
