--- a/public/CSS/form.css
+++ b/public/CSS/form.css
@@ -42,10 +42,14 @@ input {
     color: #F5F5F5;
 }
 
-/* form ajouter */
+#bouttonConnexion {
+    margin-bottom: 30px;
+}
+
+/* form ajouter CDS + Promo */
 
 .gridFormAjoutParent {
-    margin-top: 30px;
+    margin: 30px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(8, 1fr);
@@ -91,16 +95,40 @@ input {
 .gridFormDateRParent {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     grid-column-gap: 0;
     grid-row-gap: 0;
-    margin-top: 30px;
+    margin: 30px;
     font-size: 25px;
-    align-items: center;
-    justify-content: center;
+    height: 200px;
 }
 
-.gridFormDateR1 { grid-area: 1 / 1 / 2 / 3; }
-.gridFormDateR2 { grid-area: 2 / 1 / 3 / 2; }
-.gridFormDateR3 { grid-area: 2 / 2 / 3 / 3; }
-.gridFormDateR4 { grid-area: 4 / 1 / 5 / 3; }
+.gridFormDateR1 {
+    grid-area: 1 / 1 / 2 / 2;
+    margin-right: 80px;
+}
+
+.gridFormDateR2 {
+    grid-area: 1 / 2 / 2 / 3;
+    margin-left: 80px;
+}
+
+.gridFormDateR3 {
+    grid-area: 3 / 1 / 4 / 3;
+    display: flex;
+    justify-content: center;
+    height: 41px;
+}
+
+/* form mes promotions */
+
+.choixDeroulant {
+    display: flex;
+    justify-content: center;
+    font-size: 15px;
+    border-radius: 0.6em;
+    padding: 10px;
+    background-color: rgba(217, 217, 217, 0.37);
+    border: 2px solid rgba(0, 0, 0, 0.5);
+    color: #F5F5F5;
+}
