--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -12,12 +12,17 @@ main {
     grid-row-gap: 0;
 }
 
-.gridH1Vide1 { grid-area: 1 / 1 / 2 / 2; }
+.gridH1Vide1 {
+    grid-area: 1 / 1 / 2 / 2;
+}
 
 .gridH1 {
     grid-area: 1 / 2 / 2 / 5;
 }
-.gridH1Vide2 { grid-area: 1 / 5 / 2 / 6; }
+
+.gridH1Vide2 {
+    grid-area: 1 / 5 / 2 / 6;
+}
 
 /* decompte rationnaire */
 
